# cnc_akram_mebel

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Makefile  README.md  docker-compose.yml  dockerfile  vite.config.js
docs/: nav.md  тз.md  (+15 more)
server/: alembic.ini  pyproject.toml
server/alembic/: env.py  script.py.mako
server/alembic/versions/: 0001_initial.py  09cad9b7b635_attendance_verify_constraints_and_.py  15393c8aa604_attendance_table.py  2566be302171_add_is_closed_closed_at_closed_by_to_.py  2ddff9ea949a_order_employee_m2m.py  353afd3c0c34_operating_expense.py  53d39fbff4b7_employee_table.py  b49be1c52e1c_order_file.py  c7e2a4f9b1d6_perf_indexes_tier1_tier2.py  cbb57c3cf1f7_finance_tables.py  d11d6c3200d7_production_stage_orders_history.py  dd29ae32014b_add_delivery_location_to_orders.py  e3a1f2b8c490_make_internal_number_required_unique.py  f4a8c1e9d2b7_company_settings.py
server/app/: main.py
server/app/api/: attendance.py  categories.py  company.py  deps.py  employees.py  files.py  finance.py  health.py  me.py  operating_expenses.py  orders.py  stages.py
server/app/core/: config.py  security.py
server/app/db/: session.py
server/app/models/: __init__.py  attendance.py  company.py  employee.py  finance.py  order.py
server/bot/: client_bot.py  main.py  throttle.py
server/scripts/: seed_catalog.py  seed_manager.py
server/tests/: conftest.py  test_attendance.py  test_attendance_2b.py  test_auth.py  test_client_view.py  test_company_settings.py  test_files.py  test_finance.py  test_health.py  test_order_employee.py  test_orders.py  test_report.py
(+64 files in other folders)
